Able to login and logout, but nothing changes yet on mongodb side yet respect to login.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceRoot}",
+            "program": "/home/peter/go/src/github.com/pgmorgan/goSite"
             "env": {},
             "args": []
         }
